# coalesce_generic_viz_for_omni

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: omni-coalesce-sync.yml
omni_to_catalog/: __init__.py  cli.py  extractor.py  field_lineage_parser.py  orchestrator.py  slack_notifier.py  table_column_lookup.py  table_lineage_parser.py  transformer.py  uploader.py
