[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-to-catalog"
version = "3.0.0"
description = "Sync Omni metadata to Coalesce Catalog"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Coalesce", email = "support@coalesce.io" },
]
dependencies = [
    "requests>=2.31.0",
    "castor-extractor>=0.25.0",
    "sqlglot>=20.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=22.0",
    "pylint>=2.15",
    "mypy>=1.0",
    "bandit>=1.7",
]

[project.scripts]
omni-to-catalog = "omni_to_catalog.cli:main"

[project.urls]
Homepage = "https://github.com/jessemarshall/coalesce_generic_viz_for_omni"
"Bug Reports" = "https://github.com/jessemarshall/coalesce_generic_viz_for_omni/issues"
Source = "https://github.com/jessemarshall/coalesce_generic_viz_for_omni"

[tool.setuptools.packages.find]
include = ["omni_to_catalog*"]
